# FlexKV

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  build.sh  clean.sh  flexkv_benchmark_serving.sh  install.sh  node1.yml  node2.yml  online_serving_node1.sh  online_serving_node2.sh  pyproject.toml  requirements-musa.txt  requirements.txt  run_tests.sh  setup.py  setup_env.sh  setup_nvmet.py
.github/workflows/: publish.yml  vllm-compat-test.yml
benchmarks/: benchmark_cache_engine.py  benchmark_dist_kvcache.py  benchmark_evict.py  benchmark_index.py  benchmark_index_evict.py  benchmark_insert.py  benchmark_kvmanager.py  benchmark_match.py  benchmark_mempool.py  benchmark_reuse_serving.py  benchmark_server_roundtrip.py  benchmark_single_batch.py  benchmark_workers.py  example_config.json  example_config.yml  example_dist_config.yml  request_generator.py  run_dist_benchmark.sh  ssd_benchmark.py  utils.py
benchmarks/dist_benchmark/: TWONODE_DIRECT_README.md  benchmark_dist_direct.py  benchmark_dist_kvcache.py  benchmark_dist_reuse_smoke.py  example_dist_direct_config.yml  redis_check.py  run_dist_direct_benchmark.sh  utils.py
build_backends/: __init__.py  base.py  cuda_builder.py  generic_builder.py  musa_builder.py  rocm_builder.py
csrc/: ans_transfer.cu  ans_transfer.h  ans_transfer_ssd.cpp  ans_transfer_ssd.h  bindings.cpp  block_meta.h  cache_utils.h  distributed_radix_tree.cpp  distributed_radix_tree.h  eviction_strategy.cpp  eviction_strategy.h  fiemap_extent.cpp  fiemap_extent.h  gds_manager.cpp  gds_manager.h  gpu_compat.h  gtensor_handler.cuh  hash.cpp  hash.h  index.cpp  ipc_memhandle.h  layerwise.cpp  layerwise.h  lease_meta_mempool.cpp  lease_meta_mempool.h  local_radix_tree.cpp  local_radix_tree.h  lock_free_q.h  mempool.h  nvme_connect.cpp  nvme_connect.h  radix_tree.cpp  radix_tree.h  redis_meta_channel.cpp  redis_meta_channel.h  tp_transfer_thread_group.cpp  tp_transfer_thread_group.h  transfer.cu  transfer.cuh  transfer_ssd.cpp  (+1 more)
csrc/gds/: gds_base.cpp  gds_base.h  gds_manager.cpp  gds_manager.h  layout_transform.cu  layout_transform.cuh  tp_gds_transfer_thread_group.cpp  tp_gds_transfer_thread_group.h
csrc/gpu_backend/: backend_bindings.h  gpu_types.h
csrc/gpu_backend/musa/: CMakeLists.txt  gpu_transfer_bindings.h
csrc/gpu_backend/musa/gds/: gds_manager_musa.h  layout_transform_musa.mu
csrc/gpu_backend/nvidia/: CMakeLists.txt  gds_manager.cpp  gpu_ral.cpp  gpu_transfer_bindings.h  gtensor_handler.cuh  layout_transform.cuh  nvidia_bindings.cpp  tp_gds_transfer_thread_group.cpp  tp_gds_transfer_thread_group.h  tp_transfer_thread_group.cpp  tp_transfer_thread_group.h  transfer.cu  transfer.cuh
csrc/gpu_backend/nvidia/gds/: gds_manager.cpp  gds_manager.h  layout_transform.cu  layout_transform.cuh  tp_gds_transfer_thread_group.cpp  tp_gds_transfer_thread_group.h
csrc/monitoring/: metrics_manager.cpp  metrics_manager.h
csrc/musa/: bindings_musa.cpp  gtensor_handler_musa.h  tp_transfer_thread_group_musa.cpp  tp_transfer_thread_group_musa.h  transfer_musa.mu  transfer_musa.muh
csrc/pcfs/: pcfs.cpp  pcfs.h
docs/: gemma4_support.md
docs/dist_reuse/: METRICS_dist_reuse.md  OPS_QUICK_REF_p2p.md  README_en.md  README_zh.md  dist_reuse_with_cp_pp_multinode_tp_simplified.md  redis_schema.md
docs/dynamo_integration/: README_en.md  README_zh.md
docs/eviction_policy/: README_en.md  README_zh.md
docs/flexkv_config_reference/: README_en.md  README_zh.md
docs/gds/: README_en.md  README_zh.md
docs/gpu_backend/: README_en.md  README_zh.md
docs/gpu_backends/: README_en.md  README_zh.md
docs/hugepage/: README_en.md  README_zh.md
docs/monitoring/: README_en.md  README_zh.md
docs/multi_instance/: README_en.md  README_zh.md
docs/musa/: musa_support_system_design.md  musa_test_plan.md
docs/namespace/: README_en.md  README_zh.md
docs/nvmet/: README_en.md
docs/promotion/: FlexKV_official_advice.md
docs/sglang_adapter/: README.md
docs/shm_ipc/: design.md
docs/trtllm_adaption/: README_en.md  README_zh.md
docs/vllm_adapter/: README_en.md  README_zh.md
examples/: run_server.py  scheduler_server_example.py
examples/sglang_adaption/: sglang_flexkv.patch  sglang_flexkv_patch
examples/trt_adaption/: 0001-add-flexkv-support.patch  extra-llm-api-config-cg.yml  extra-llm-api-config-no_cg.yml  flexkv_config.json  launch.sh
examples/trtllm_adaption/: extra-llm-api-config-cg.yml  extra-llm-api-config.yml  launch.sh  (+4 more)
flexkv/: __init__.py  build_config.py  kv_group.py  kvmanager.py  kvtask.py  mooncakeEngineWrapper.py  transfer_manager.py
monitoring/: docker-compose.yml  prometheus.yml
multi-nodes/: benchmark_jsonl.py  benchmark_multi_node.sh  start_multi_node_serving.sh  stop_all_nodes.sh
scripts/: README.md  README_zh.md  bench_multiturn.sh  common.sh  convert_sharegpt_to_openai.py  convert_sharegpt_to_openai.sh  flexkv_config.yml  install_sharegpt_dataset.sh  launch_vllm_server.sh  main.sh  run_benchmark.sh
tests/: _dist_reuse_fakes.py  common_utils.py  conftest.py  replay_from_tracer.py  replay_from_tracer_server_client.py  test_aggregate_radix.py  test_cache_config_batch_b.py  test_cache_engine.py  test_cache_engine_accel.py  test_cache_engine_dist_reuse_gate.py  test_cext_evict_refcount_guard.py  test_config_hugepage.py  test_coord_protocol.py  test_d3_filter_and_get_clones.py  test_dis_radixtree_basic.py  test_dist_reuse_launcher.py  test_evict_refcount_guard.py  test_failure_detector.py  test_fetch_uncached_seq.py  test_flexkv_redis_db.py  test_gpu_backend.py  test_gpu_backend_dispatch.py  test_gpu_runtime.py  test_kv_group.py  test_kvmanager.py  test_lockfreequeue.py  test_master_coordinator.py  test_memory_handle.py  test_metrics_dist_reuse.py  test_multi_turn_async_perf.py  test_multinode_flags.py  test_multinode_role_policy.py  test_multiprocess.py  test_musa_build.py  test_namespace_isolation.py  test_nvcomp.py  test_nvcomp_ssd.py  test_phase2_combinations.py  test_redis_db_integration.py  test_redis_integration.py  (+17 more)
(+150 files in other folders)
